Fix T68945: VSE - Improper audio on frame 1

This has already been fixed in 8d207cdc3b307fa20bc5b29059c596306aa2a65c
as fix for T52472: VSE Audio Volume not set immediately, but I failed to
backport it to upstream audaspace which is the reason the problem was
back.